fixed overflow in main display

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+*,::before,::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 :root {
   /* Global colors definition */
   --clr-denim: #022959;
@@ -61,6 +68,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  align-content: center;
 }
 
 /* utility classes  */
